# gridright

./: .gitignore  README.md  gridright_architecture.md  gridright_seller_onboarding_spec.md  handoff.md  package-lock.json  package.json  phase5-report.md  phases.md  phases10-18.md  render.yaml
apps/api/: pyproject.toml
apps/api/app/: auth.py  main.py  routers.py
apps/api/app/services/: autopay.py  badge_service.py  commitments.py  decisions.py  demand.py  exception_queue.py  fleet.py  forecast.py  merkle.py  meter.py  meter_aggregation.py  meter_binding.py  onboarding.py  operator_dashboard.py  password_gate.py  policy_checker.py  recommender.py  seller_dashboard.py  settlement_cycle.py  wallet.py  wallet_activation.py  weather.py
apps/api/scripts/: demo_ai.py  seed_demo_meter.py
apps/api/tests/: conftest.py  test_auth.py  test_autopay.py  test_badges.py  test_commitments.py  test_demand.py  test_e2e_devnet.py  test_exception_queue.py  test_fleet.py  test_forecast.py  test_meter.py  test_meter_aggregation.py  test_meter_binding.py  test_migration.py  test_onboarding.py  test_operator_dashboard.py  test_password_gate.py  test_policy_checker.py  test_readings_before_activation.py  test_recommend_api.py  test_recommender.py  test_seller_dashboard.py  test_settlement_cycle.py  test_wallet_activation.py  test_wallet_requirement.py
docs/: phantom-qa-checklist.md
hackathon-presentation/: GridRight.pptx  index.html  make_pptx.py  script.md  slides.md  (+1 more)
programs/gridright/programs/gridright/: Cargo.toml  Xargo.toml
programs/gridright/programs/gridright/src/: lib.rs
(+112 files in other folders)
