[project]
name = "gridright-api"
version = "0.1.0"
description = "GridRight FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0.0",
    "supabase>=2.0.0",
    "httpx>=0.28.0",
    "groq>=0.12.0",
    "PyJWT>=2.8.0",
    "solders>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "asyncpg>=0.30.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
