[package]
name = "gridright"
version = "0.1.0"
description = "GridRight Solana Settlement Program"
edition = "2021"

[lib]
name = "gridright"
crate-type = ["lib", "cdylib"]

[dependencies]
anchor-lang = "0.32.1"

[dev-dependencies]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
